Fix CSS Layouting Add selection cursor color Fix Flexbox gap

--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     display: flex;
     justify-content: center;
     background-color: #ffff;
+
+    ::selection {
+        background-color: rgb(68, 68, 68);
+        color: #ffff;
+    }
 }
 
 .content {
@@ -34,16 +39,15 @@ body {
 .projects {
     display: flex;
     flex-wrap: wrap;
+    gap: 1em;
 }
 
 .boxes {
     flex-grow: 1;
     width: 250px;
-    max-width: auto;
     padding: 0 10px 0 10px;
-    margin: 0 10px 10px 0;
-    border-style: dotted solid solid dotted;
     border-radius: 10px;
+    border-style: dotted solid solid dotted;
 }
 
 h1 {
